Overlap fix

--- a/sukun/style.css
+++ b/sukun/style.css
@@ -10,4 +10,5 @@ body {
     position: absolute;
     border-radius: 100%;
     opacity: 0.7;
+    z-index: -1;
 }
